Fix z-index

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -709,7 +709,7 @@ body {
     }
   
     .footer_menu_sec .title {
-      z-index: 100;
+      z-index: 99;
       background-color: #f5f5f7;
     }
   
